--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <h1>🚴🏼‍♀️ Bikewatching</h1>
 
-    <div id="map"></div>
-    
+    <div id="map"><svg></svg></div>
+
   </body>
 </html>
