done with step 5

--- a/index.html
+++ b/index.html
@@ -17,8 +17,17 @@
     <title>Bikewatching</title>
   </head>
   <body>
-    <h1>🚴🏼‍♀️ Bikewatching</h1>
+    <header>
+        <h1>🚴🏼‍♀️ Bikewatching</h1>
 
+        <label>
+            Time of Day:
+            <input type="range" id="time-slider" min="-1" max="1440" value="-1" />
+            <time id="selected-time">hi</time>
+            <em id="any-time">(any time)</em> 
+        </label>
+        
+    </header>
     <div id="map"><svg></svg></div>
 
   </body>
